src/objects/Allocation_resources__c.object
<CustomObject>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Allocation_resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_date__c</fullName>
        <label>Approved date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_houver__c</fullName>
        <label>Approved hours</label>
        <precision>8</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost center</label>
        <referenceTo>Costcentre__c</referenceTo>
        <relationshipLabel>Allocation resources</relationshipLabel>
        <relationshipName>Allocation_resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>FiscalYear</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Musqot_fiscal_year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Musqot fiscal year</label>
        <referenceTo>Musqot_fiscal_year__c</referenceTo>
        <relationshipLabel>Allocation resources</relationshipLabel>
        <relationshipName>Allocation_resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Allocation resources</relationshipLabel>
        <relationshipName>Allocation_resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Subproject__c</referenceTo>
        <relationshipLabel>Allocation resources</relationshipLabel>
        <relationshipName>Allocation_resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_date__c</fullName>
        <label>Request date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_hours__c</fullName>
        <label>Requested hours</label>
        <precision>8</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Plan</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Allocation resources (To Plan)</relationshipLabel>
        <relationshipName>Allocation_resources1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Project</label>
        <referenceTo>Subproject__c</referenceTo>
        <relationshipLabel>Allocation resources (To Project)</relationshipLabel>
        <relationshipName>Allocation_resources1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_marketing_activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To marketing activity</label>
        <referenceTo>Marketing_activity__c</referenceTo>
        <relationshipLabel>Allocation resources</relationshipLabel>
        <relationshipName>Allocation_resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Allocation resources</label>
    <nameField>
        <label>Allocation resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allocation resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>